--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - go get github.com/mattn/goveralls
   - if ! go get github.com/golang/tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
-    - $HOME/gopath/bin/goveralls -service=travis-ci -repotoken zU8IfMr9m779DH8JhjX41TK9lbjcATyAI
+    - $HOME/gopath/bin/goveralls -service=travis-ci
